src/test/ui/span/E0535.stderr
error[E0535]: invalid argument
  --> $DIR/E0535.rs:1:10
   |
LL | #[inline(unknown)]
   |          ^^^^^^^
   |
   = help: valid inline arguments are `always` and `never`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0535`.
